infra/k8s/manifests/argocd-ingress/ingress.yaml
# IngressRoute for ArgoCD and a TLS certificate for secure communication

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.mayorstacks.work`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-infrajobs-tls
